Scene working, no dropdown

--- a/Project/src/main/resources/service_request_main.fxml
+++ b/Project/src/main/resources/service_request_main.fxml
@@ -144,7 +144,7 @@
                               </ImageView>
                            </graphic>
                         </JFXButton>
-                        <JFXButton alignment="BOTTOM_CENTER" contentDisplay="TOP" graphicTextGap="20.0" layoutX="647.0" layoutY="116.0" prefHeight="180.0" prefWidth="160.0" style="-fx-background-color: #ffc41e;" styleClass="jfx-button-SVmain3" stylesheets="@background.css" text="External Transportation" textFill="WHITE">
+                        <JFXButton alignment="BOTTOM_CENTER" contentDisplay="TOP" graphicTextGap="20.0" layoutX="647.0" layoutY="116.0" onAction="#setTransportButton" prefHeight="180.0" prefWidth="160.0" style="-fx-background-color: #ffc41e;" styleClass="jfx-button-SVmain3" stylesheets="@background.css" text="External Transportation" textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="14.0" />
                            </font>
