--- a/Project/src/main/resources/service_request_prescription_services_main.fxml
+++ b/Project/src/main/resources/service_request_prescription_services_main.fxml
@@ -74,24 +74,30 @@
                            </font>
                         </Text>
                         <ChoiceBox fx:id="roomSelect" layoutX="48.0" layoutY="109.0" prefWidth="150.0" style="-fx-background-color: #ffffff;" />
-                        <JFXTextField fx:id="serviceMessage" layoutX="48.0" layoutY="300.0" prefHeight="150.0" prefWidth="150.0" style="-fx-background-color: #ffffff;" />
+                        <JFXTextField fx:id="serviceMessage" layoutX="48.0" layoutY="325.0" prefHeight="125.0" prefWidth="150.0" style="-fx-background-color: #ffffff;" />
                         <Text fill="WHITE" layoutX="50.0" layoutY="104.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Room Select">
                            <font>
                               <Font name="System Bold" size="12.0" />
                            </font>
                         </Text>
-                        <Text fill="WHITE" layoutX="48.0" layoutY="165.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Patient Name">
+                        <Text fill="WHITE" layoutX="48.0" layoutY="155.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Patient Name">
                            <font>
                               <Font name="System Bold" size="12.0" />
                            </font>
                         </Text>
-                        <Text fill="WHITE" layoutX="48.0" layoutY="215.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Perscription ">
+                        <Text fill="WHITE" layoutX="48.0" layoutY="210.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Perscription ">
                            <font>
                               <Font name="System Bold" size="12.0" />
                            </font>
                         </Text>
-                        <JFXTextField fx:id="patientNameTextField" layoutX="48.0" layoutY="175.0" prefHeight="25.0" prefWidth="150.0" style="-fx-background-color: #ffffff;" />
-                        <JFXTextField fx:id="prescriptionTextField" layoutX="48.0" layoutY="225.0" prefHeight="25.0" prefWidth="150.0" style="-fx-background-color: #ffffff;" />
+                        <JFXTextField fx:id="patientNameTextField" layoutX="48.0" layoutY="165.0" prefHeight="25.0" prefWidth="150.0" style="-fx-background-color: #ffffff;" />
+                        <JFXTextField fx:id="prescriptionTextField" layoutX="48.0" layoutY="220.0" prefHeight="25.0" prefWidth="150.0" style="-fx-background-color: #ffffff;" />
+                        <Text fill="WHITE" layoutX="48.0" layoutY="265.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Perscription Length">
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font>
+                        </Text>
+                        <ChoiceBox fx:id="lengthChoiceBox" layoutX="48.0" layoutY="275.0" prefWidth="150.0" style="-fx-background-color: #ffffff;" />
                      </children>
                   </AnchorPane>
                </left>
