--- a/Project/src/main/resources/service_request_main.fxml
+++ b/Project/src/main/resources/service_request_main.fxml
@@ -132,7 +132,7 @@
                               </ImageView>
                            </graphic>
                         </JFXButton>
-                        <JFXButton alignment="BOTTOM_CENTER" contentDisplay="TOP" graphicTextGap="20.0" layoutX="47.0" layoutY="116.0" prefHeight="180.0" prefWidth="160.0" style="-fx-background-color: #ffc41e;" styleClass="jfx-button-SVmain2" stylesheets="@background.css" text="Audio Visual" textFill="WHITE">
+                        <JFXButton alignment="BOTTOM_CENTER" contentDisplay="TOP" graphicTextGap="20.0" layoutX="47.0" layoutY="116.0" prefHeight="180.0" onAction="#avButton" prefWidth="160.0" style="-fx-background-color: #ffc41e;" styleClass="jfx-button-SVmain2" stylesheets="@background.css" text="Audio Visual" textFill="WHITE">
                            <font>
                               <Font name="System Bold" size="14.0" />
                            </font>
