--- a/Project/src/main/resources/service_request_audio_visual.fxml
+++ b/Project/src/main/resources/service_request_audio_visual.fxml
@@ -10,12 +10,13 @@
 <?import javafx.scene.effect.DropShadow?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
-
 
 <StackPane xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="servicerequests.UIControllerSRAVE">
    <children>
@@ -51,32 +52,43 @@
             </ImageView>
          </right>
          <left>
-            <AnchorPane prefHeight="575.0" prefWidth="250.0" BorderPane.alignment="CENTER">
+            <GridPane fx:id="gridPane" prefWidth="200.0">
+               <columnConstraints>
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" />
+               </columnConstraints>
+               <rowConstraints>
+                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                  <RowConstraints percentHeight="30.0" />
+                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" vgrow="SOMETIMES" />
+               </rowConstraints>
                <children>
-                  <JFXButton layoutX="86.0" layoutY="472.0" styleClass="jfx-button_edit" stylesheets="@background.css" text="Confirm" />
-                  <JFXButton contentDisplay="CENTER" layoutX="102.0" layoutY="516.0" styleClass="jfx-button-cancel" stylesheets="@background.css" text=" ">
+                  <JFXButton styleClass="jfx-button_edit" stylesheets="@background.css" text="Confirm" GridPane.halignment="CENTER" GridPane.rowIndex="4" />
+                  <JFXButton contentDisplay="CENTER" styleClass="jfx-button-cancel" stylesheets="@background.css" text=" " GridPane.halignment="CENTER" GridPane.rowIndex="5">
                      <graphic>
                         <ImageView fitHeight="25.0" fitWidth="25.0" pickOnBounds="true" preserveRatio="true">
                            <image>
-                              <Image url="@icon/cancel%20(1).png" />
+                              <Image url="@icon/cancel (1).png" />
                            </image>
                         </ImageView>
                      </graphic>
                   </JFXButton>
-                  <Text fill="WHITE" layoutX="31.0" layoutY="44.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Servie Name ">
+                  <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Servie Name " GridPane.halignment="CENTER">
                      <font>
                         <Font name="System Bold Italic" size="24.0" />
                      </font>
                   </Text>
-                  <Text fill="WHITE" layoutX="31.0" layoutY="63.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Your Name">
+                  <Text fill="WHITE" strokeType="OUTSIDE" strokeWidth="0.0" text="Your Name" GridPane.halignment="CENTER" GridPane.rowIndex="1">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Text>
-                  <ChoiceBox layoutX="48.0" layoutY="109.0" prefWidth="150.0" style="-fx-background-color: #ffffff;" />
-                  <JFXTextField layoutX="48.0" layoutY="220.0" prefHeight="220.0" prefWidth="150.0" style="-fx-background-color: #ffffff;" />
+                  <ChoiceBox style="-fx-background-color: #ffffff;" GridPane.halignment="CENTER" GridPane.rowIndex="2" />
+                  <JFXTextField fx:id="serviceMessage" style="-fx-background-color: #ffffff;" GridPane.rowIndex="3"/>
                </children>
-            </AnchorPane>
+            </GridPane>
          </left>
             </BorderPane>
    </children>
