--- a/Project/src/main/resources/service_request_sanitation.fxml
+++ b/Project/src/main/resources/service_request_sanitation.fxml
@@ -28,7 +28,7 @@
                       <top>
                           <MenuBar blendMode="ADD" prefWidth="600.0" style="-fx-background-color: white;" stylesheets="@background.css" BorderPane.alignment="CENTER">
                               <menus>
-                                  <Menu fx:id="homeButton" mnemonicParsing="false" onShowing="#setHomeButton" onAction="#setHomeButton" text="Home">
+                                  <Menu fx:id="homeButton" mnemonicParsing="false" onAction="#setHomeButton" onShowing="#setHomeButton" text="Home">
                            <items>
                               <MenuItem mnemonicParsing="false" text="HOME" />
                            </items>
@@ -73,7 +73,8 @@
                               <Font name="System Bold" size="12.0" />
                            </font>
                         </Text>
-                        <ChoiceBox fx:id="rooomSelect" layoutX="48.0" layoutY="109.0" onMouseClicked="#setRoomSelect" prefWidth="150.0" style="-fx-background-color: #ffffff;" />
+                        <ChoiceBox fx:id="roomSelect" layoutX="48.0" layoutY="109.0" onMouseClicked="#setRoomSelect" prefWidth="150.0" style="-fx-background-color: #ffffff;" />
+                        <ChoiceBox fx:id="sanitationSelect" layoutX="48.0" layoutY="164.0" onMouseClicked="#setSanitationSelect" prefWidth="150.0" style="-fx-background-color: #ffffff;" />
                         <JFXTextField fx:id="serviceMessage" alignment="CENTER" layoutX="48.0" layoutY="220.0" prefHeight="220.0" prefWidth="150.0" promptText="What is wrong?" style="-fx-background-color: #ffffff;" />
                      </children>
                   </AnchorPane>
