--- a/Project/src/main/resources/admin_tools_main.fxml
+++ b/Project/src/main/resources/admin_tools_main.fxml
@@ -44,25 +44,61 @@
                </top>
             </BorderPane>
             <VBox layoutX="214.0" layoutY="140.0" />
-            <JFXButton fx:id="viewEdgesButton" buttonType="RAISED" layoutX="250.0" layoutY="218.0" onAction="#setViewEdgesButton" prefHeight="40.0" prefWidth="350.0" styleClass="jfx-button-admin-main" stylesheets="@background.css" text="Edit Edges" textAlignment="CENTER" textFill="WHITE" wrapText="true">
-               <font>
-                  <Font name="System Bold" size="28.0" />
-               </font>
-            </JFXButton>
             <Text fill="WHITE" layoutX="262.0" layoutY="156.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Administrator Tools">
                <font>
                   <Font name="System Bold" size="40.0" />
                </font>
             </Text>
-            <JFXButton fx:id="viewEdgesButton1" buttonType="RAISED" layoutX="250.0" layoutY="326.0" onAction="#setViewNodesButton" prefHeight="40.0" prefWidth="350.0" styleClass="jfx-button-admin-main" stylesheets="@background.css" text="Edit Nodes" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+            <JFXButton fx:id="viewEdgesButton" alignment="BOTTOM_CENTER" buttonType="RAISED" contentDisplay="TOP" graphicTextGap="25.0" layoutX="29.0" layoutY="189.0" onAction="#setViewEdgesButton" prefHeight="40.0" prefWidth="350.0" styleClass="jfx-button-admin-main" stylesheets="@background.css" text="Edit Edges" textAlignment="CENTER" textFill="WHITE" wrapText="true" AnchorPane.topAnchor="189.0">
                <font>
                   <Font name="System Bold" size="28.0" />
                </font>
+               <graphic>
+                  <ImageView fitHeight="140.0" fitWidth="140.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@icon/seo-and-web.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
             </JFXButton>
-            <JFXButton fx:id="viewServiceRequestsButton" buttonType="RAISED" layoutX="250.0" layoutY="433.0" onAction="#setViewServiceRequestsButton" prefHeight="40.0" prefWidth="350.0" styleClass="jfx-button-admin-main" stylesheets="@background.css" text="View Service Requests" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+            <JFXButton fx:id="viewEdgesButton1" alignment="BOTTOM_CENTER" buttonType="RAISED" contentDisplay="TOP" graphicTextGap="27.0" layoutX="244.0" layoutY="189.0" onAction="#setViewNodesButton" prefHeight="40.0" prefWidth="350.0" styleClass="jfx-button-admin-main" stylesheets="@background.css" text="Edit Nodes" textAlignment="CENTER" textFill="WHITE" wrapText="true">
                <font>
                   <Font name="System Bold" size="28.0" />
                </font>
+               <graphic>
+                  <ImageView fitHeight="140.0" fitWidth="130.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@icon/dots.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </JFXButton>
+            <JFXButton fx:id="viewServiceRequestsButton" alignment="BOTTOM_CENTER" buttonType="RAISED" contentDisplay="TOP" graphicTextGap="10.0" layoutX="457.0" layoutY="189.0" onAction="#setViewServiceRequestsButton" prefHeight="40.0" prefWidth="350.0" styleClass="jfx-button-admin-main" stylesheets="@background.css" text="View Service Requests" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+               <font>
+                  <Font name="System Bold" size="28.0" />
+               </font>
+               <graphic>
+                  <ImageView fitHeight="140.0" fitWidth="130.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@icon/listing.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </JFXButton>
+            <JFXButton fx:id="viewServiceRequestsButton1" alignment="BOTTOM_CENTER" buttonType="RAISED" contentDisplay="TOP" graphicTextGap="25.0" layoutX="671.0" layoutY="189.0" onAction="#setViewServiceRequestsButton" prefHeight="40.0" prefWidth="350.0" styleClass="jfx-button-admin-main" stylesheets="@background.css" text="Edit Users" textAlignment="CENTER" textFill="WHITE" wrapText="true">
+               <font>
+                  <Font name="System Bold" size="28.0" />
+               </font>
+               <graphic>
+                  <ImageView fitHeight="140.0" fitWidth="140.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@icon/doctor.png" />
+                     </image>
+                     <effect>
+                        <ColorAdjust brightness="0.25" />
+                     </effect>
+                  </ImageView>
+               </graphic>
             </JFXButton>
          </children>
       </AnchorPane>
