--- a/Project/src/main/resources/service_request_transport.fxml
+++ b/Project/src/main/resources/service_request_transport.fxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXTextField?>
+<?import com.jfoenix.controls.JFXTextArea?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
@@ -74,7 +74,6 @@
                            </font>
                         </Text>
                         <ChoiceBox fx:id="roomSelect" layoutX="48.0" layoutY="109.0" prefWidth="150.0" style="-fx-background-color: #ffffff;" />
-                        <JFXTextField fx:id="serviceMessage" layoutX="48.0" layoutY="220.0" prefHeight="220.0" prefWidth="150.0" style="-fx-background-color: #ffffff;" />
                         <Text fill="WHITE" layoutX="48.0" layoutY="105.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Select Pickup Location">
                            <font>
                                 <Font name="System Bold" size="14.0" />
@@ -85,6 +84,13 @@
                               <Font name="System Bold" size="14.0" />
                            </font>
                         </Text>
+                        <ChoiceBox fx:id="transportType" layoutX="47.0" layoutY="164.0" prefWidth="150.0" />
+                        <Text fill="WHITE" layoutX="47.0" layoutY="160.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Transport Type">
+                           <font>
+                              <Font name="System Bold" size="14.0" />
+                           </font>
+                        </Text>
+                        <JFXTextArea fx:id="serviceMessage" focusColor="WHITE" layoutX="47.0" layoutY="220.0" prefHeight="218.0" prefWidth="152.0" unFocusColor="WHITE" />
                      </children>
                   </AnchorPane>
                </left>
