--- a/Project/src/main/resources/reservations_main.fxml
+++ b/Project/src/main/resources/reservations_main.fxml
@@ -14,6 +14,8 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.shape.Polygon?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
@@ -47,12 +49,19 @@
                                 </MenuBar>
                             </top>
                             <left>
-                                <AnchorPane opacity="0.3" prefHeight="375.0" prefWidth="900.0" style="-fx-background-color: #ffffff;" BorderPane.alignment="BOTTOM_CENTER" />
+                                <AnchorPane opacity="0.3" prefHeight="375.0" prefWidth="900.0" style="-fx-background-color: #ffffff;" BorderPane.alignment="BOTTOM_CENTER">
+                           <children>
+                              <ImageView fitHeight="477.0" fitWidth="631.0" layoutX="249.0" layoutY="49.0" pickOnBounds="true" preserveRatio="true">
+                                 <image>
+                                    <Image url="@OBC-4-Concept-Plan-Overview.jpg" />
+                                 </image>
+                              </ImageView>
+                           </children></AnchorPane>
                             </left>
                         </BorderPane>
                     </children>
                 </AnchorPane>
-                <ChoiceBox fx:id="nodeSelect" prefWidth="170.0" style="-fx-background-color: #ffffff;" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="270.0">
+                <ChoiceBox fx:id="workplaceSelect" prefWidth="170.0" style="-fx-background-color: #ffffff;" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="270.0">
                     <effect>
                         <Blend mode="MULTIPLY" opacity="0.34" />
                     </effect>
@@ -89,11 +98,19 @@
                     </font>
                 </Text>
                 <JFXTimePicker fx:id="endTimePicker" defaultColor="#5777c6" layoutX="10.0" layoutY="10.0" style="-fx-background-color: white;" AnchorPane.leftAnchor="15.0" AnchorPane.topAnchor="195.0" />
-            <ImageView fitHeight="575.0" fitWidth="700.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="200.0" AnchorPane.topAnchor="75.0">
-               <image>
-                  <Image url="@Tower2.png" />
-               </image>
-            </ImageView>
+
+            <Rectangle fx:id="classroom8" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="66.0" layoutX="535.0" layoutY="89.0" opacity="0.15" stroke="BLACK" strokeType="INSIDE" width="62.0" />
+            <Rectangle fx:id="classroom6" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="66.0" layoutX="595.0" layoutY="89.0" opacity="0.15" stroke="BLACK" strokeType="INSIDE" width="62.0" />
+            <Rectangle fx:id="classroom7" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="60.0" layoutX="580.0" layoutY="187.0" opacity="0.15" stroke="BLACK" strokeType="INSIDE" width="42.0" />
+            <Rectangle fx:id="classroom5" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="60.0" layoutX="623.0" layoutY="187.0" opacity="0.15" stroke="BLACK" strokeType="INSIDE" width="55.0" />
+            <Rectangle fx:id="classroom9" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="33.0" layoutX="544.0" layoutY="187.0" opacity="0.15" stroke="BLACK" strokeType="INSIDE" width="35.0" />
+            <Rectangle fx:id="classroom1" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="43.0" layoutX="623.0" layoutY="342.0" opacity="0.15" stroke="BLACK" strokeType="INSIDE" width="78.0" />
+            <Rectangle fx:id="MHCR" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="33.0" layoutX="623.0" layoutY="385.0" opacity="0.15" stroke="BLACK" strokeType="INSIDE" width="78.0" />
+            <Rectangle fx:id="classroom2" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="33.0" layoutX="724.0" layoutY="266.0" opacity="0.15" rotate="70.0" stroke="BLACK" strokeType="INSIDE" width="69.0" />
+            <Rectangle fx:id="classroom3" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="33.0" layoutX="697.0" layoutY="200.0" opacity="0.15" rotate="70.0" stroke="BLACK" strokeType="INSIDE" width="69.0" />
+            <Rectangle fx:id="pantry" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="84.0" layoutX="633.0" layoutY="425.0" opacity="0.15" stroke="BLACK" strokeType="INSIDE" width="84.0" />
+            <Rectangle fx:id="classroom4" arcHeight="5.0" arcWidth="5.0" fill="DODGERBLUE" height="66.0" layoutX="657.0" layoutY="89.0" opacity="0.15" stroke="BLACK" strokeType="INSIDE" width="35.0" />
+            <Polygon fx:id="MHA" fill="DODGERBLUE" layoutX="767.0" layoutY="374.0" opacity="0.15" points="-50.0, 40.0, 39.0, 20.0, 18.8045654296875, -60.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" />
             </children>
         </AnchorPane>
     </children>
