--- a/Project/src/main/resources/reservations_main.fxml
+++ b/Project/src/main/resources/reservations_main.fxml
@@ -48,16 +48,13 @@
                                     </effect>
                                 </MenuBar>
                             </top>
-                            <left>
-                                <AnchorPane opacity="0.3" prefHeight="375.0" prefWidth="900.0" style="-fx-background-color: #ffffff;" BorderPane.alignment="BOTTOM_CENTER">
-                           <children>
-                              <ImageView fitHeight="477.0" fitWidth="631.0" layoutX="249.0" layoutY="49.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@OBC-4-Concept-Plan-Overview.jpg" />
-                                 </image>
-                              </ImageView>
-                           </children></AnchorPane>
-                            </left>
+                     <right>
+                        <ImageView fitHeight="575.0" fitWidth="700.0" pickOnBounds="true" preserveRatio="true" BorderPane.alignment="CENTER">
+                           <image>
+                              <Image url="@OBC-4-Concept-Plan-Overview.jpg" />
+                           </image>
+                        </ImageView>
+                     </right>
                         </BorderPane>
                     </children>
                 </AnchorPane>
